# web-scraper

./: README.md  file.html  pyproject.toml
tests/: test_web_scraper.py
web_scraper/: web_scraper.py
